# DiffusionPromptDB

./: .gitignore  AGENTS.md  AUTHENTICATION_SETUP.md  BACKEND_FRONTEND_INTEGRATION.md  CONTRIBUTING.md  ENV_SECURITY_SETUP.md  LICENSE  Makefile  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_CHECK.md  RATE_LIMITING_CONFIG.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_FINAL_AUDIT.md  SECURITY_IMPLEMENTATION_345.md  SECURITY_IMPLEMENTATION_REPORT.md  SECURITY_IMPROVEMENTS_IMPLEMENTED.md  check_prompt_tags.py  check_tags_db.py  fix_duplicate_tags.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_auth.py  test_update_prompt.py
.github/: pull_request_template.md
.github/workflows/: codeql.yml
database/postgres/: schema.sql
deploy/: MIXED_CONTENT_FIX.md  QUICK_FIX_SUMMARY.md  README.example.md  README.md  deploy_force_https_fix.sh  deploy_mixed_content_fix.sh  diagnose_mixed_content.sh  final_force_https_fix.sh  finish_install.sh  fix_mixed_content.sh  fix_nginx.sh  fix_nginx_final.sh  fix_users_db.sh  force_https_rebuild.sh  install_from_tarball.sh  nginx-production.conf  rsync-exclude.txt  server_setup.sh  server_setup.sh.example  setup_ssl.sh
frontend/: .env.example  .env.production  .gitignore  DEPLOYMENT_READY.md  FRONTEND_README.md  I18N_GUIDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: check-translations.mjs
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: authStore.test.ts  landingPageLabels.test.ts
frontend/src/hooks/: usePrompts.ts  useToast.ts
frontend/src/i18n/: config.ts
frontend/src/pages/: AdminUsersPage.tsx  DashboardPage.tsx  InfoPage.tsx  LoginPage.tsx  ProfilePage.tsx  PromptIngestionPage.tsx  PromptsPage.tsx  RegisterPage.tsx  SearchPage.tsx  SettingsPage.tsx  VerifyAccountPage.tsx  index.ts
frontend/src/providers/: QueryProvider.tsx
frontend/src/router/: AppRouter.tsx
scripts/: analyze_art_styles.py  check_databases.py  check_prod_status.py  clean_invalid_prompts.py  init_db.py
src/api/: .env.example  README.md  __init__.py  add_catalog_indexes.py  add_missing_prompt_fields.py  add_my_prompts_only_preference.py  add_ownership_to_prompts.py  add_prompt_image_fields.py  auth.py  check_db.py  check_db_structure.py  config.py  db.py  init_catalog_db.py  init_preferences_table.py  init_users_db.py  main.py  requirements-dev.txt  requirements.txt  security.py  security_fixes.py  start_server.py  test_auth_security.py  test_login.py  test_my_prompts_filter.py  test_new_fields.py  test_permissions.py  test_simple_api.py
src/art_style_cataloger/: .gitignore  PROMPT_TEMPLATE.md  QUICKSTART.md  README.md  analyze_results.py  apply_results.py  check_status.py  extract_unspecified_prompts.py  run_art_cataloger.py
src/batch_analyzer/: .env.example  CLEANUP.md  README.md  SETUP.md  __init__.py  analyze_import_errors.py  check_job_status.py  clean_break_patterns.py  clean_claude_prefix.py  clean_double_backslash_n.py  compare_models.py  config.yaml.example  convert_batch_output.py  db_schema.sql  example_queries.py  import_to_db.py  list_profiles.py  normalize_data.py  requirements.txt  run_analysis.py  run_realtime.py  s3-policy.json  search_catalog.py  test_catalog_integration.py  test_search.py  verify_setup.py
src/diffusion_prompt_db/: __init__.py  __main__.py  config.py  database.py  models.py
tests/: README.md  __init__.py  test_database.py
tests/integration/: test_all_endpoints.py  test_live_endpoints.py
tools/sd_metadata_dump/: README.md  export_sd_metadata.py
(+77 files in other folders)
